# supercollider

./: .gitignore  .gitmodules
HelpSource/Classes/: GLAlpha.schelp  GLBlend.schelp  GLBlue.schelp  GLGreen.schelp  GLMix.schelp  GLOpacity.schelp  GLOut.schelp  GLPlayImg.schelp  GLPlayVid.schelp  GLPrevFrame.schelp  GLPrevFrame2.schelp  GLRGB.schelp  GLRGBA.schelp  GLRed.schelp  GLRotate.schelp  GLShowImgTex.schelp  GLShowVidTex.schelp  GLTexCoords.schelp  GLTexFlipX.schelp  GLTexFlipY.schelp  GLWhite.schelp
HelpSource/Reference/: Server-Command-Reference.schelp
SCClassLibrary/Common/Video/: GL.sc  SHK.sc  Video.sc
common/: SC_Filesystem_unix.cpp  SC_StringBuffer.cpp  sc_popen.cpp
include/plugin_interface/: SC_Unit.h  SC_Wire.h  SC_World.h
include/server/: SC_OSC_Commands.h
server/: CMakeLists.txt
server/plugins/: CMakeLists.txt  VideoUGens.cpp
server/scsynth/: CMakeLists.txt  SC_Graph.cpp  SC_MiscCmds.cpp  SC_Node.cpp  SC_Video.cpp  SC_Video.h  SC_World.cpp
